Improved use of URL.